MINOR: Replace Collections factory methods with Java 11+ equivalents in streams (#23242)
This is the 5th part of improving replace collections factory methods
with its Java 11 equivalents in the streams module.

Reviewers: Ken Huang <s7133700@gmail.com>

---------

Signed-off-by: see-quick <maros.orsak159@gmail.com>