@@ -26,7 +26,6 @@ import org.apache.kafka.streams.state.StoreBuilder;
 import org.apache.kafka.streams.state.ValueTimestampHeaders;
 import org.apache.kafka.streams.state.internals.KeyValueStoreWrapper;
 
-import java.util.Collections;
 import java.util.Set;
 
 import static org.apache.kafka.streams.state.ValueTimestampHeaders.getValueOrNull;
@@ -75,7 +74,7 @@ public class KTableFilter<KIn, VIn> implements KTableProcessorSupplier<KIn, VIn,
         if (storeFactory == null) {
             return null;
         }
-        return Collections.singleton(new StoreFactory.FactoryWrappingStoreBuilder<>(storeFactory));
+        return Set.of(new StoreFactory.FactoryWrappingStoreBuilder<>(storeFactory));
     }
 
     @Override
