@@ -30,7 +30,6 @@ import org.apache.kafka.streams.state.StoreBuilder;
 import org.apache.kafka.streams.state.ValueTimestampHeaders;
 import org.apache.kafka.streams.state.internals.KeyValueStoreWrapper;
 
-import java.util.Collections;
 import java.util.Set;
 
 import static org.apache.kafka.streams.state.ValueTimestampHeaders.getValueOrNull;
@@ -64,7 +63,7 @@ public class KTableReduce<K, V> implements KTableProcessorSupplier<K, V, K, V> {
 
     @Override
     public Set<StoreBuilder<?>> stores() {
-        return Collections.singleton(new FactoryWrappingStoreBuilder<>(storeFactory));
+        return Set.of(new FactoryWrappingStoreBuilder<>(storeFactory));
     }
 
     @Override
